--- a/train.ipynb
+++ b/train.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "705009ce",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# 加载预训练模型（YOLOv11有多个尺寸可选）\n",
-    "model = YOLO('runs/detect/train2/weights/last.pt')\n",
+    "model = YOLO('yolo11n.pt')\n",
     "\n",
     "# 开始训练\n",
     "results = model.train(\n",
