--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "14f3153d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ffbd3a14",
    "metadata": {},
    "outputs": [
@@ -28,17 +28,18 @@
       "Ultralytics 8.3.40 🚀 Python-3.11.11 torch-2.6.0+cu124 CPU (AMD Ryzen 9 7845HX with Radeon Graphics)\n",
       "YOLO11n summary (fused): 238 layers, 2,588,782 parameters, 0 gradients, 6.3 GFLOPs\n",
       "\n",
-      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'runs/detect/train2/weights/best.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 38, 8400) (5.3 MB)\n",
-      "\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m starting export with onnx 1.17.0 opset 19...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m slimming with onnxslim 0.1.50...\n",
-      "\u001b[34m\u001b[1mONNX:\u001b[0m export success ✅ 1.3s, saved as 'runs/detect/train2/weights/best.onnx' (10.1 MB)\n",
-      "\n",
-      "Export complete (1.5s)\n",
-      "Results saved to \u001b[1m/home/huang/mahjong-detector-2/runs/detect/train2/weights\u001b[0m\n",
-      "Predict:         yolo predict task=detect model=runs/detect/train2/weights/best.onnx imgsz=640  \n",
-      "Validate:        yolo val task=detect model=runs/detect/train2/weights/best.onnx imgsz=640 data=datasets/data.yaml  \n",
-      "Visualize:       https://netron.app\n"
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from 'runs/detect/train2/weights/best.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 38, 8400) (5.3 MB)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -50,7 +51,7 @@
     "model.export(format=\"onnx\", data=\"datasets/data.yaml\")\n",
     "\n",
     "model_fp16 = float16.convert_float_to_float16(onnx.load(f\"{weights_dir}/best.onnx\"))\n",
-    "onnx.save(model_fp16, f\"{weights_dir}/best.onnx\")"
+    "onnx.save(model_fp16, f\"{weights_dir}/best.fp16.onnx\")"
    ]
   },
   {
